--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+    color-scheme: light;
+}
+
+html, body, #root {
+    background: rgb(244, 245, 250);
+    color: #111;
+    font-family: 'Open Sans', sans-serif;
+
+}
+
+.input {
+    background: #fff;
+    color: #111;
+}
+
+.collapse {
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 15px;
+}
+
+.ring-base-200 {
+    border: 1px solid rgba(0,0,0,0.2);
+}
