--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body,
   background: rgb(244, 245, 250);
   color: #111;
   font-family: "Open Sans", sans-serif;
+  overflow-x: clip;
+  max-width: 100%;
+  max-height: fit-content;
 }
 
 .input {
