--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap");
 
+@font-face {
+    font-family: 'FrutigerArabic';
+    src: url('./assets/fonts/FrutigerLTArabic65Bold.ttf') format('truetype');
+    font-weight: 900; /* or bold */
+    font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  color-scheme: light;
+    color-scheme: light;
 }
 
 html,
 body,
 #root {
-  background: rgb(244, 245, 250);
-  color: #111;
-  font-family: "Open Sans", sans-serif;
-  overflow-x: clip;
-  max-width: 100%;
-  max-height: fit-content;
+    background: rgb(244, 245, 250);
+    color: #111;
+    font-family: "Open Sans", sans-serif;
+    overflow-x: clip;
+    max-width: 100%;
+    max-height: fit-content;
+}
+
+[dir="rtl"] html,
+body,
+#root {
+    background: rgb(244, 245, 250);
+    color: #111;
+    font-family: "FrutigerArabic", sans-serif;
+    overflow-x: clip;
+    max-width: 100%;
+    max-height: fit-content;
 }
 
 .input {
-  background: #fff;
-  color: #111;
+    background: #fff;
+    color: #111;
 }
 
 .collapse {
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
 }
 
 .ring-base-200 {
-  border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
