--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,7 @@
     color-scheme: light;
 }
 
-html,
-body,
-#root {
+html, body, #root {
     background: rgb(244, 245, 250);
     color: #111;
     font-family: "Open Sans", sans-serif;
@@ -26,15 +24,10 @@ body,
     max-height: fit-content;
 }
 
-[dir="rtl"] html,
-body,
-#root {
-    background: rgb(244, 245, 250);
-    color: #111;
+html[dir="rtl"],
+html[dir="rtl"] body,
+html[dir="rtl"] #root {
     font-family: "FrutigerArabic", sans-serif;
-    overflow-x: clip;
-    max-width: 100%;
-    max-height: fit-content;
 }
 
 .input {
